# mockerell

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  LICENSE  Pipfile  README.md  mock-bot-telegram.cabal  package.yaml  pyproject.toml  stack.yaml
.github/workflows/: build-and-deploy.yaml  docker-publish.yaml  docker-publish.yml
app/: Inline.hs  Main.hs
bot/: __main__.py
manifests/: README.md  deployment.yaml  kustomization.yaml
manifests/ci/: rbac.yaml
pymocklib/: __init__.py  __main__.py  helpers.py  styles.py  transformers.py
src/: __main__.py
